# Pluto

./: .gcloudignore  .gitignore  README.md  cloudbuild.yaml  out.txt
pluto-backend/: .env.example  .gitignore  Dockerfile  README.md  api-crash.txt  cloudrun-service.yaml  crash.txt  create_secrets.ps1  deploy.bat  deploy.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  setup.py  test_script.ps1
pluto-backend/app/: main.py
pluto-backend/app/api/: deps.py  websocket.py
pluto-backend/app/api/v1/: auth.py  chats.py  matches.py  notifications.py  swipes.py  trips.py  users.py
pluto-backend/app/core/: auth.py  cache.py  config.py  database.py  exceptions.py  firebase.py  logging.py  rate_limit.py  supabase.py
pluto-backend/app/models/: __init__.py  block.py  chat.py  interest.py  location.py  match.py  message.py  notification.py  photo.py  profile.py  swipe.py  trip.py  user.py
pluto-backend/app/repositories/: notification_repo.py  user_repo.py
pluto-backend/app/schemas/: auth.py  chat.py  match.py  notification.py  swipe.py  trip.py  user.py  workflow.py
pluto-backend/app/services/: chat_service.py  edge_compress.py  match_service.py  notification_service.py  trip_service.py  user_service.py  workflow_service.py
pluto-backend/app/utils/: storage.py
pluto-backend/migrations/: 002_optimization.sql  003_rename_to_supabase.sql  004_rls_policies.sql  init.sql
pluto-backend/scripts/: audit_backend.py  seed_data.py  test_backend.py
pluto-backend/static/: demo-upload.html
pluto-backend/supabase/: setup-edge-function.bat
(+56 files in other folders)
